language/move-lang/tests/move_check/typing/if_mismatched_branches.exp
error: 

   ┌── tests/move_check/typing/if_mismatched_branches.move:3:9 ───
   │
 3 │         if (cond) () else 0;
   │         ^^^^^^^^^^^^^^^^^^^ Incompatible branches
   │                   -- Is not compatible with: '()'
   │                           - The type: integer
   │

error: 

   ┌── tests/move_check/typing/if_mismatched_branches.move:4:9 ───
   │
 4 │         if (cond) 0 else ();
   │         ^^^^^^^^^^^^^^^^^^^ Incompatible branches
   │                   - The type: integer
   │                          -- Is not compatible with: '()'
   │

error: 

   ┌── tests/move_check/typing/if_mismatched_branches.move:8:9 ───
   │
 8 │         if (cond) 0x0 else 0;
   │         ^^^^^^^^^^^^^^^^^^^^ Incompatible branches
   │                   --- Is not compatible with: 'address'
   │                            - The type: integer
   │

error: 

   ┌── tests/move_check/typing/if_mismatched_branches.move:9:9 ───
   │
 9 │         if (cond) 0 else false;
   │         ^^^^^^^^^^^^^^^^^^^^^^ Incompatible branches
   │                   - The type: integer
   │                          ----- Is not compatible with: 'bool'
   │

error: 

    ┌── tests/move_check/typing/if_mismatched_branches.move:13:9 ───
    │
 13 │         if (cond) (0, false) else (1, 1);
    │         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Incompatible branches
    │                       ----- Is not compatible with: 'bool'
    │                                       - The type: integer
    │

error: 

    ┌── tests/move_check/typing/if_mismatched_branches.move:14:9 ───
    │
 14 │         if (cond) (0, false) else (false, false);
    │         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Incompatible branches
    │                    - The type: integer
    │                                    ----- Is not compatible with: 'bool'
    │

error: 

    ┌── tests/move_check/typing/if_mismatched_branches.move:15:9 ───
    │
 15 │         if (cond) (0, false) else (true, 0x0);
    │         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Incompatible branches
    │                    - The type: integer
    │                                    ---- Is not compatible with: 'bool'
    │

error: 

    ┌── tests/move_check/typing/if_mismatched_branches.move:19:9 ───
    │
 19 │         if (cond) (0, false, 0) else (0, false);
    │         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Incompatible branches
    │                   ------------- The expression list type of length 3: '({integer}, bool, {integer})'
    │                                      ---------- Is not compatible with the expression list type of length 2: '({integer}, bool)'
    │

error: 

    ┌── tests/move_check/typing/if_mismatched_branches.move:20:9 ───
    │
 20 │         if (cond) (0, false) else (0, false, 0);
    │         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Incompatible branches
    │                   ---------- The expression list type of length 2: '({integer}, bool)'
    │                                   ------------- Is not compatible with the expression list type of length 3: '({integer}, bool, {integer})'
    │

